fix safari image stretch issue

--- a/style.css
+++ b/style.css
@@ -343,8 +343,8 @@ main {
     }
 
     .image-container img {
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
         max-height: 70vh;
     }
 
